day11_jsql_ipynb_edited

--- a/December-11/ipynb_rohithmsr_jsql.ipynb
+++ b/December-11/ipynb_rohithmsr_jsql.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,22 +98,24 @@
     "    output = \"CREATE TABLE \"\n",
     "    output += y[\"table name\"]\n",
     "    output += \" (\"\n",
+    "    \n",
+    "    st = \"\"\n",
     "\n",
     "    for key,val in y[\"headers\"].items():\n",
-    "        output += val[\"column name\"]\n",
-    "        output += \" \"\n",
-    "        output += val[\"data type\"]\n",
-    "        output += \",\"\n",
+    "        st += val[\"column name\"]\n",
+    "        st += \" \"\n",
+    "        st += val[\"data type\"]\n",
+    "        st += \",\"\n",
     "\n",
-    "    output += \"\\b);\\n\"\n",
-    "    \n",
+    "    output += st[0:len(st)-1]\n",
+    "    output += \");\\n\"\n",
     "    for key,val in y[\"records\"].items():\n",
+    "        st = str(val)\n",
     "        output += \"INSERT INTO \"\n",
     "        output += y[\"table name\"]\n",
     "        output += \" values \"\n",
     "        output += \"(\"\n",
-    "        output += str(val)[1:]\n",
-    "        output += '\\b'\n",
+    "        output += st[1:len(st) - 1]\n",
     "        output += \");\"\n",
     "        output += '\\n'\n",
     "    \n",
@@ -129,17 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CREATE TABLE my_table (id integer,name varchar(30),\b);\n",
-      "INSERT INTO my_table values (1, 'Josh']\b);\n",
-      "INSERT INTO my_table values (2, 'Mike']\b);\n",
-      "INSERT INTO my_table values (3, 'Tom']\b);\n",
+      "CREATE TABLE my_table (id integer,name varchar(30));\n",
+      "INSERT INTO my_table values (1, 'Josh');\n",
+      "INSERT INTO my_table values (2, 'Mike');\n",
+      "INSERT INTO my_table values (3, 'Tom');\n",
       "\n"
      ]
     }
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,18 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CREATE TABLE books (id integer,book_name varchar(30),price integer,page_count integer,\b);\n",
-      "INSERT INTO books values (1, 'Harry Potter', 1200, 330]\b);\n",
-      "INSERT INTO books values (2, 'Sherlock Holmes', 800, 280]\b);\n",
-      "INSERT INTO books values (3, 'Iron Man', 500, 200]\b);\n",
-      "INSERT INTO books values (4, 'Batman vs Superman', 1000, 300]\b);\n",
+      "CREATE TABLE books (id integer,book_name varchar(30),price integer,page_count integer);\n",
+      "INSERT INTO books values (1, 'Harry Potter', 1200, 330);\n",
+      "INSERT INTO books values (2, 'Sherlock Holmes', 800, 280);\n",
+      "INSERT INTO books values (3, 'Iron Man', 500, 200);\n",
+      "INSERT INTO books values (4, 'Batman vs Superman', 1000, 300);\n",
       "\n"
      ]
     }
@@ -198,13 +200,6 @@
     "answers = jsql(myfile)\n",
     "print(answers)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
